--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
